--- a/contribs/gcp/slurm.jinja
+++ b/contribs/gcp/slurm.jinja
@@ -16,29 +16,29 @@
 # limitations under the License.
 
 resources:
-- name: slurm-network
+- name: {{properties["cluster_name"]}}-slurm-network
   type: compute.v1.network
   properties:
     autoCreateSubnetworks: false
-- name: slurm-subnet
+- name: {{properties["cluster_name"]}}-slurm-subnet
   type: compute.v1.subnetwork
   properties:
-    network: $(ref.slurm-network.selfLink)
+    network: $(ref.{{properties["cluster_name"]}}-slurm-network.selfLink)
     ipCidrRange: {{ properties["cidr"]}}
     region: {{ properties["region"] }}
-- name: ssh-firewall-rule
+- name: {{properties["cluster_name"]}}-ssh-firewall-rule
   type: compute.v1.firewall
   properties:
-    network: $(ref.slurm-network.selfLink)
+    network: $(ref.{{properties["cluster_name"]}}-slurm-network.selfLink)
     sourceRanges: ["0.0.0.0/0"]
     allowed:
     - IPProtocol: TCP
       ports: ["22"]
     - IPProtocol: ICMP
-- name: all-internal-firewall-rule
+- name: {{properties["cluster_name"]}}-all-internal-firewall-rule
   type: compute.v1.firewall
   properties:
-    network: $(ref.slurm-network.selfLink)
+    network: $(ref.{{properties["cluster_name"]}}-slurm-network.selfLink)
     sourceRanges: [{{properties["cidr"]}}]
     allowed:
     - IPProtocol: TCP
@@ -48,20 +48,20 @@ resources:
     - IPProtocol: ICMP
 
 {% if not properties['external_compute_ips'] %}
-- name: no-ip-internet-route
+- name: {{properties["cluster_name"]}}-no-ip-internet-route
   type: compute.v1.route
   properties:
-    network: $(ref.slurm-network.selfLink)
+    network: $(ref.{{properties["cluster_name"]}}-slurm-network.selfLink)
     tags: ["compute"]
     destRange: 0.0.0.0/0
-    nextHopInstance: https://www.googleapis.com/compute/v1/projects/{{ env["project"] }}/zones/{{ properties["zone"] }}/instances/controller
+    nextHopInstance: https://www.googleapis.com/compute/v1/projects/{{ env["project"] }}/zones/{{ properties["zone"] }}/instances/{{properties["cluster_name"]}}-controller
     priority: 800
   metadata:
     dependsOn:
-    - controller
+    - {{properties["cluster_name"]}}-controller
 {% endif %}
 
-- name: controller
+- name: {{properties["cluster_name"]}}-controller
   type: compute.v1.instance
   properties:
     zone: {{ properties["zone"] }}
@@ -79,7 +79,7 @@ resources:
     canIpForward: true
 {% endif %}
     networkInterfaces:
-    - subnetwork: $(ref.slurm-subnet.selfLink)
+    - subnetwork: $(ref.{{properties["cluster_name"]}}-slurm-subnet.selfLink)
       accessConfigs:
       - name: External NAT
         type: ONE_TO_ONE_NAT
@@ -92,7 +92,7 @@ resources:
         - controller
 {% if properties["labels"] %}
     labels:
-      controller: {{properties["labels"]}}
+      {{properties["cluster_name"]}}-controller: {{properties["labels"]}}
 {% endif %}
     metadata:
       items:
@@ -104,13 +104,13 @@ resources:
             {{ imports["scripts/startup-script.py"]|indent(12)|replace("@PROJECT@",env["project"])|replace("@ZONE@",properties["zone"])|replace("@INSTANCE_TYPE@","compute")|replace("@MUNGE_KEY@",properties["munge_key"])|replace("@SLURM_VERSION@",properties["slurm_version"])|replace("@STATIC_NODE_COUNT@",properties["static_node_count"])|replace("@MAX_NODE_COUNT@",properties["max_node_count"])|replace("@MACHINE_TYPE@",properties["compute_machine_type"])|replace("@DEF_SLURM_ACCT@",properties["default_account"])|replace("@DEF_SLURM_USERS@",properties["default_users"])|replace("@CLUSTER_NAME@",properties["cluster_name"])|replace("@EXTERNAL_COMPUTE_IPS@",properties["external_compute_ips"]) }}
         - key: slurm_resume
           value: |
-            {{ imports["scripts/resume.py"]|indent(12)|replace("@PROJECT@",env["project"])|replace("@ZONE@",properties["zone"])|replace("@REGION@",properties["region"])|replace("@MACHINE_TYPE@",properties["compute_machine_type"])|replace("@PREEMPTIBLE@",properties["preemptible_bursting"])|replace("@EXTERNAL_COMPUTE_IPS@",properties["external_compute_ips"])|replace("@DISK_SIZE_GB@",properties["compute_disk_size_gb"])|replace("@DISK_TYPE@",properties["compute_disk_type"])|replace("@LABELS@",properties["labels"]) }}
+            {{ imports["scripts/resume.py"]|indent(12)|replace("@PROJECT@",env["project"])|replace("@ZONE@",properties["zone"])|replace("@REGION@",properties["region"])|replace("@MACHINE_TYPE@",properties["compute_machine_type"])|replace("@PREEMPTIBLE@",properties["preemptible_bursting"])|replace("@EXTERNAL_COMPUTE_IPS@",properties["external_compute_ips"])|replace("@DISK_SIZE_GB@",properties["compute_disk_size_gb"])|replace("@DISK_TYPE@",properties["compute_disk_type"])|replace("@LABELS@",properties["labels"])|replace("@CLUSTER_NAME@",properties["cluster_name"]) }}
         - key: slurm_suspend
           value: |
             {{ imports["scripts/suspend.py"]|indent(12)|replace("@PROJECT@",env["project"])|replace("@ZONE@",properties["zone"]) }}
 
 
-- name: login1
+- name: {{properties["cluster_name"]}}-login1
   type: compute.v1.instance
   properties:
     zone: {{ properties["zone"] }}
@@ -125,7 +125,7 @@ resources:
         diskType: https://www.googleapis.com/compute/v1/projects/{{ env["project"] }}/zones/{{ properties["zone"] }}/diskTypes/{{ properties["login_disk_type"] }}
         diskSizeGb: {{ properties["login_disk_size_gb"] }}
     networkInterfaces:
-    - subnetwork: $(ref.slurm-subnet.selfLink)
+    - subnetwork: $(ref.{{properties["cluster_name"]}}-slurm-subnet.selfLink)
       accessConfigs:
       - name: External NAT
         type: ONE_TO_ONE_NAT
@@ -138,7 +138,7 @@ resources:
         - login
 {% if properties["labels"] %}
     labels:
-      login: {{properties["labels"]}}
+      {{properties["cluster_name"]}}-login1: {{properties["labels"]}}
 {% endif %}
     metadata:
       items:
@@ -148,7 +148,7 @@ resources:
 
 
 {% for n in range(properties['static_node_count']) %}
-- name: compute{{ n + 1 }}
+- name: {{properties["cluster_name"]}}-compute{{ n + 1 }}
   type: compute.v1.instance
   properties:
     zone: {{ properties["zone"] }}
@@ -170,7 +170,7 @@ resources:
         diskType: https://www.googleapis.com/compute/v1/projects/{{ env["project"] }}/zones/{{ properties["zone"] }}/diskTypes/{{ properties["compute_disk_type"] }}
         diskSizeGb: {{ properties["compute_disk_size_gb"] }}
     networkInterfaces:
-    - subnetwork: $(ref.slurm-subnet.selfLink)
+    - subnetwork: $(ref.{{properties["cluster_name"]}}-slurm-subnet.selfLink)
 {% if properties['external_compute_ips'] %}
       accessConfigs:
       - name: External NAT
@@ -185,13 +185,13 @@ resources:
         - compute
 {% if properties["labels"] %}
     labels:
-      compute{{ n + 1}}: {{properties["labels"]}}
+      {{properties["cluster_name"]}}-compute{{ n + 1}}: {{properties["labels"]}}
 {% endif %}
     metadata:
       items:
         - key: startup-script
           value: |
-            {{ imports["scripts/startup-script.py"]|indent(12)|replace("@PROJECT@",env["project"])|replace("@ZONE@",properties["zone"])|replace("@INSTANCE_TYPE@","compute")|replace("@MUNGE_KEY@",properties["munge_key"])|replace("@SLURM_VERSION@",properties["slurm_version"])|replace("@STATIC_NODE_COUNT@",properties["static_node_count"])|replace("@MAX_NODE_COUNT@",properties["max_node_count"])|replace("@MACHINE_TYPE@",properties["compute_machine_type"])|replace("@DEF_SLURM_ACCT@",properties["default_account"])|replace("@DEF_SLURM_USERS@",properties["default_users"])|replace("@EXTERNAL_COMPUTE_IPS@",properties["external_compute_ips"])|replace("@GPU_TYPE@",properties["gpu_type"]) }}
+            {{ imports["scripts/startup-script.py"]|indent(12)|replace("@PROJECT@",env["project"])|replace("@ZONE@",properties["zone"])|replace("@INSTANCE_TYPE@","compute")|replace("@MUNGE_KEY@",properties["munge_key"])|replace("@SLURM_VERSION@",properties["slurm_version"])|replace("@STATIC_NODE_COUNT@",properties["static_node_count"])|replace("@MAX_NODE_COUNT@",properties["max_node_count"])|replace("@MACHINE_TYPE@",properties["compute_machine_type"])|replace("@DEF_SLURM_ACCT@",properties["default_account"])|replace("@DEF_SLURM_USERS@",properties["default_users"])|replace("@EXTERNAL_COMPUTE_IPS@",properties["external_compute_ips"])|replace("@GPU_TYPE@",properties["gpu_type"])|replace("@CLUSTER_NAME@",properties["cluster_name"]) }}
         - key: gpu_script
           value: |
             {{imports["scripts/nvidia.sh"]|indent(12)}}
