--- a/contribs/gcp/slurm.jinja
+++ b/contribs/gcp/slurm.jinja
@@ -200,9 +200,11 @@ resources:
         - key: startup-script
           value: |
             {{ imports["scripts/startup-script.py"]|indent(12)|replace("@PROJECT@",env["project"])|replace("@ZONE@",properties["zone"])|replace("@INSTANCE_TYPE@","compute")|replace("@MUNGE_KEY@",properties["munge_key"])|replace("@SLURM_VERSION@",properties["slurm_version"])|replace("@STATIC_NODE_COUNT@",properties["static_node_count"])|replace("@MAX_NODE_COUNT@",properties["max_node_count"])|replace("@MACHINE_TYPE@",properties["compute_machine_type"])|replace("@DEF_SLURM_ACCT@",properties["default_account"])|replace("@DEF_SLURM_USERS@",properties["default_users"])|replace("@EXTERNAL_COMPUTE_IPS@",properties["external_compute_ips"])|replace("@GPU_TYPE@",properties["gpu_type"])|replace("@CLUSTER_NAME@",properties["cluster_name"])|replace("@NFS_HOME_SERVER@",properties["nfs_home_server"]) }}
+        - key: enable-oslogin
+          value: "TRUE"
+{% if properties["gpu_type"] %}
         - key: gpu-script
           value: |
             {{imports["scripts/nvidia.sh"]|indent(12)}}
-        - key: enable-oslogin
-          value: "TRUE"
+{% endif %}
 {% endfor %}
